# opensrt

./: .gitignore  README.md  pyproject.toml
opensrt/: __main__.py  audio.py  cli.py  srt_writer.py  transcribe.py
